--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,20 @@ server:
     servlet:
         context-path: /
 spring:
+    mail:
+        host: stmp.gmail.com
+        port: 587
+        username: soljiju@gmail.com
+        password: vgke bhlg ilye wpaq
+        properties:
+            mail:
+                smtp:
+                    auth: true
+                    timeout: 5000
+                    starttls:
+                        enable: true
+
+
     application:
         name: sboard
         version: ${version}
